--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,17 @@
-streamlit>=1.22
-PyMuPDF>=1.22.0
-reportlab>=3.6.0
-Pillow>=9.0.0
+# Core app framework
+streamlit==1.39.0
+
+# PDF parsing & manipulation
+PyPDF2==3.0.1
+pdfplumber==0.11.0
+fitz==0.0.1.dev2
+PyMuPDF==1.24.9
+reportlab==4.2.5
+
+# Diff & text comparison
+python-Levenshtein==0.25.1
+difflib2==0.5.0
+
+# Utilities
+pandas==2.2.2
+numpy==1.26.4
