--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,6 @@
 streamlit==1.39.0
-PyMuPDF==1.23.26
-pdfminer.six==20221105
-reportlab==3.6.13
+PyPDF2==3.0.1
+reportlab==4.0.8
+python-docx==1.1.2
+
 
