--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,5 @@
 streamlit==1.39.0
-PyPDF2==3.0.1
-reportlab==4.0.8
-python-docx==1.1.2
-
-
+PyMuPDF==1.23.6
+Pillow==9.5.0
+reportlab==3.6.13
+pandas==2.2.2
