--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,9 @@
 streamlit==1.39.0
-PyMuPDF==1.23.6
-Pillow==9.5.0
-reportlab==3.6.13
+PyMuPDF==1.24.9
+PyPDF2==3.0.1
+pdfplumber==0.11.0
+reportlab==4.2.5
+python-Levenshtein==0.25.1
 pandas==2.2.2
+numpy==1.26.4
+
