--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,20 @@
-streamlit==1.22.0
-PyMuPDF==1.23.6
-reportlab==3.6.13
-Pillow==9.5.0
+# Core app dependencies
+streamlit==1.39.0
+PyMuPDF==1.24.10
+pdfminer.six==20221105
+python-docx==1.1.0
+reportlab==4.2.2
+
+# OCR support
 pytesseract==0.3.10
+Pillow==10.3.0
+opencv-python-headless==4.10.0.84
+
+# Utilities
+numpy==1.26.4
 pandas==2.2.2
+diff-match-patch==20230430
+
+# Optional for better PDF handling
+pdfplumber==0.11.0
+
