--- a/requirements.txt
+++ b/requirements.txt
@@ -1,29 +1,34 @@
-# Core UI
+# Core dependencies
 streamlit==1.36.0
+tornado<7
+watchdog<5
 
-# PDF rendering / text extraction / low-level parsing
-PyMuPDF==1.22.5           # provides `fitz` — fast PDF rendering and bbox extraction
-pdfminer.six==20221105    # robust PDF text/layout extraction
-pdfplumber==0.11.0        # convenient wrapper around pdfminer for structured extraction
-
-# PDF manipulation & generation
+# PDF + OCR
+pdfplumber==0.11.0
+pdfminer.six==20231228
+pytesseract==0.3.10
+pdf2image==1.17.0
 PyPDF2==3.0.1
-reportlab==3.6.13         # create summary page, PDF overlays
+fitz==0.0.1.dev2
+PyMuPDF==1.24.9
+reportlab==4.2.2
 
-# Images & OCR
-Pillow==10.0.0
-pytesseract==0.3.10       # Python binding for tesseract OCR (system tesseract required)
-
-# Numerical & image processing (used for precision diffs & optional visual ops)
-numpy==1.26.4
-opencv-python-headless==4.10.0.84
-
-# Data tables / summary export
+# Data and analysis
 pandas==2.2.2
+numpy==1.26.4
 
-# Utilities (small helpful packages)
-pdf2image==1.16.3         # optional; only if you need alternative render paths
-tqdm==4.66.1              # progress bars (optional/debugging)
+# Utils
+Pillow==10.4.0
+opencv-python-headless==4.10.0.84
+scikit-image==0.24.0
+
+# Optional helpers
+chardet==5.2.0
+charset-normalizer==3.4.3
+python-dateutil==2.9.0.post0
+pytz==2025.2
+tzdata==2025.2
+
 
 
 
