--- a/requirements.txt
+++ b/requirements.txt
@@ -1,33 +1,31 @@
-# Core dependencies
+# UI
 streamlit==1.36.0
-tornado<7
-watchdog<5
 
-# PDF + OCR
+# PDF parsing and rendering (PyMuPDF provides "fitz" module)
+PyMuPDF==1.24.9
+
+# PDF utilities
 pdfplumber==0.11.0
 pdfminer.six==20231228
-pytesseract==0.3.10
-pdf2image==1.17.0
 PyPDF2==3.0.1
-fitz==0.0.1.dev2
-PyMuPDF==1.24.9
 reportlab==4.2.2
+pdf2image==1.17.0
 
-# Data and analysis
-pandas==2.2.2
-numpy==1.26.4
-
-# Utils
+# Images & OCR python bindings
 Pillow==10.4.0
+pytesseract==0.3.10
+
+# Numeric / image ops
+numpy==1.26.4
 opencv-python-headless==4.10.0.84
 scikit-image==0.24.0
 
-# Optional helpers
-chardet==5.2.0
-charset-normalizer==3.4.3
-python-dateutil==2.9.0.post0
-pytz==2025.2
-tzdata==2025.2
+# Data table
+pandas==2.2.2
+
+# Optional utilities
+tqdm==4.66.1
+
 
 
 
